--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.4a25de76bef211be34a2.bundle.css" rel="stylesheet"/></head>
+<link href="styles.f74381be979888c325da.bundle.css" rel="stylesheet"/></head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading...Loading</app-root>
 <script type="text/javascript" src="inline.05fca1cfeb0862a5c66c.bundle.js"></script><script type="text/javascript" src="polyfills.6268e6a8aaf44bbe02ad.bundle.js"></script><script type="text/javascript" src="main.351a81a83cd43c60de08.bundle.js"></script></body>
 </html>
